# SharpPicks

./: .cursorrules  .env.example  .gitignore  .railwayignore  .replit  BRAND.md  BRAND_GUIDELINES.md  CRON_SCHEDULE.md  FULL_APP_FLOW.md  POSITIONING.md  Procfile  RAILWAY.md  STORE_LISTING.md  admin_api.py  app.py  arbitrage.py  auth.py  backfill_mlb.py  balldontlie_api.py  bankroll.py  bdl_cache.json  capacitor.config.json  cards_api.py  commentary.py  content_engine.py  dashboard_api.py  db_path.py  email_renderer.py  email_service.py  import_historical.py  import_kaggle_spreads.py  index.html  injuries.py  insights_api.py  journal_seeder.py  legal_pages.py  live_model.py  main.py  market_note_templates.py  mlb_bullpen.py  (+37 more)
.upm/: store.json
android/: capacitor.settings.gradle  gradle.properties  variables.gradle
attached_assets/: 1771366215_time_sharp-picks-firebase-adminsdk-fbsvc-100c74dc4_1771366255610.json  Pasted--At-top-with-other-state-const-trackedBets-setTrackedBe_1770166923686.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1770838675376.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1771130892519.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1771139623482.txt  Pasted--SHARP-PICKS-DASHBOARD-API-Backend-endpoints-to-power-t_1770066743876.txt  Pasted--SHARP-PICKS-FRONTEND-AUDIT-FIXES-CRITICAL-FIXES-1-Remo_1770135714504.txt  Pasted--SHARP-PICKS-NBA-DATA-COLLECTOR-Run-this-daily-to-build_1770061700566.txt  Pasted--SHARPPICKS-LOGO-APP-IMPLEMENTATION-SPEC-FINAL-1-PRIMAR_1771602548768.txt  Pasted--Sharp-Journal-Next-Three-Entries-Entry-1-HOW-IT-WORKS-_1772039257965.txt  Pasted--Sharp-Journal-Next-Three-Entries-Entry-1-HOW-IT-WORKS-_1772117906677.txt  Pasted--Sharp-Picks-Pick-Card-UI-Redesign-Spec-Date-2026-02-27_1772231154214.txt  Pasted--Sharp-Picks-Project-Specification-What-This-Is-Sharp-P_1770830899057.txt  Pasted--What-You-re-Doing-Really-Well-1-Clear-Positioning-Shar_1771197459052.txt  Pasted--What-You-re-Doing-Right-1-Model-metrics-at-the-top-str_1771198161992.txt  Pasted--What-s-Strong-1-The-Sharp-Picks-Pro-header-Clean-Confi_1771197979582.txt  Pasted-1-Add-Firebase-to-your-web-app-client-Include-config-re_1771288492030.txt  (+36 more)
brand-kit/: SharpPicks-Brand-Guide.md
emails/: render.ts  (+3 more)
(+424 files in other folders)
