[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "kagglehub>=0.4.2",
    "lightgbm>=4.6.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
]
