[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "kagglehub>=0.4.2",
    "lightgbm>=4.6.0",
    "numpy>=2.4.2",
    "oauthlib>=3.3.1",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.11.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.5",
    "xgboost>=3.1.3",
]
